--- a/package.json
+++ b/package.json
@@ -11,8 +11,9 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "rollup -c",
     "build:dev": "rollup -c --watch",
-    "prepare": "husky install",
-    "scriptname": "cmd"
+    "scriptname": "cmd",
+    "docs:dev": "vuepress dev docs",
+    "docs:build": "vuepress build docs"
   },
   "keywords": [
     "three.js",
@@ -40,13 +41,17 @@
     "conventional-changelog-cli": "^4.1.0",
     "conventional-changelog-custom-config": "^0.3.1",
     "esbuild": "^0.19.4",
-    "husky": "^8.0.3",
     "lint-staged": "^14.0.1",
     "rollup": "^4.0.2",
     "rollup-plugin-dts": "^6.1.0",
     "rollup-plugin-esbuild": "^6.1.0",
     "rollup-plugin-typescript2": "^0.36.0",
-    "typescript": "^5.2.2"
+    "typescript": "^5.2.2",
+    "@vuepress/client": "2.0.0-beta.61",
+    "@vuepress/core": "^1.9.9",
+    "vuepress": "2.0.0-beta.61",
+    "@vuepress/utils": "2.0.0-alpha.1",
+    "@vuepress/plugin-docsearch": "2.0.0-beta.61"
   },
   "dependencies": {
     "three": "^0.157.0"
