--- a/package.json
+++ b/package.json
@@ -51,7 +51,8 @@
     "@vuepress/core": "^1.9.9",
     "vuepress": "2.0.0-beta.61",
     "@vuepress/utils": "2.0.0-alpha.1",
-    "@vuepress/plugin-docsearch": "2.0.0-beta.61"
+    "@vuepress/plugin-docsearch": "2.0.0-beta.61",
+    "vue": "^3.2.47"
   },
   "dependencies": {
     "three": "^0.157.0"
