feat: ✨ 优化挂载等API, 完善自动刷新帧等机制

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@trickle/lec3d",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "easier three.js encapsulated by lec",
   "main": "dist/index.js",
   "publishConfig": {
@@ -9,7 +9,7 @@
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "rollup -c",
+    "build": "rimraf dist && rollup -c",
     "build:dev": "rollup -c --watch",
     "scriptname": "cmd",
     "docs:dev": "vuepress dev docs",
@@ -27,6 +27,10 @@
   "author": [
     "2779066456@qq.com"
   ],
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/lec-org/lec3d.git"
+  },
   "license": "ISC",
   "devDependencies": {
     "@babel/core": "^7.23.0",
@@ -36,23 +40,24 @@
     "@rollup/plugin-json": "^6.0.1",
     "@rollup/plugin-node-resolve": "^15.2.3",
     "@types/three": "^0.156.0",
+    "@vuepress/client": "2.0.0-beta.61",
+    "@vuepress/core": "^1.9.9",
+    "@vuepress/plugin-docsearch": "2.0.0-beta.61",
+    "@vuepress/utils": "2.0.0-alpha.1",
     "compare-func": "^2.0.0",
     "conventional-changelog": "^5.1.0",
     "conventional-changelog-cli": "^4.1.0",
     "conventional-changelog-custom-config": "^0.3.1",
     "esbuild": "^0.19.4",
     "lint-staged": "^14.0.1",
+    "rimraf": "^5.0.5",
     "rollup": "^4.0.2",
     "rollup-plugin-dts": "^6.1.0",
     "rollup-plugin-esbuild": "^6.1.0",
     "rollup-plugin-typescript2": "^0.36.0",
     "typescript": "^5.2.2",
-    "@vuepress/client": "2.0.0-beta.61",
-    "@vuepress/core": "^1.9.9",
-    "vuepress": "2.0.0-beta.61",
-    "@vuepress/utils": "2.0.0-alpha.1",
-    "@vuepress/plugin-docsearch": "2.0.0-beta.61",
-    "vue": "^3.2.47"
+    "vue": "^3.2.47",
+    "vuepress": "2.0.0-beta.61"
   },
   "dependencies": {
     "three": "^0.157.0"
