--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "conventional-changelog-cli": "^4.1.0",
     "conventional-changelog-custom-config": "^0.3.1",
     "esbuild": "^0.19.4",
+    "highlight.js": "^11.9.0",
     "lint-staged": "^14.0.1",
     "rimraf": "^5.0.5",
     "rollup": "^4.0.2",
