--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "url": "https://github.com/lec-org/lec3d.git"
   },
   "homepage": "https://github.com/lec-org/lec3d",
-  "license": "ISC",
+  "license": "MIT",
   "devDependencies": {
     "@babel/core": "^7.23.0",
     "@rollup/plugin-alias": "^5.0.1",
