--- a/examples/vue/package.json
+++ b/examples/vue/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@trickle/lec3d": "file:.yalc/@trickle/lec3d",
+    "three": "^0.158.0",
     "vue": "^3.2.41"
   },
   "devDependencies": {
