--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@trickle/lec3d",
-  "version": "0.0.4",
+  "version": "0.0.5",
   "description": "easier three.js encapsulated by lec",
   "main": "dist/index.js",
   "publishConfig": {
@@ -61,7 +61,7 @@
     "vue": "^3.2.47",
     "vuepress": "2.0.0-beta.61"
   },
-  "dependencies": {
+  "peerDependencies": {
     "three": "^0.157.0"
   },
   "files": [
